# mongodb-serverless-benchmark

./: LICENSE  README.md  mongo_serverless_benchmark.html  mongo_serverless_benchmark.ipynb  pyproject.toml
mongodb_serverless_benchmark/: mongo_benchmark.py  mongo_drop_dbs.py
results/: results_serverfull_eu_north_1.json  results_serverless_eu_north_1.json  results_serverless_eu_west_1.json
