[tool.poetry]
name = "mongodb-serverless-benchmark"
version = "0.1.0"
description = ""
authors = ["Ville Kärkkäin <ville.karkkainen@nordhero.com>"]
readme = "README.md"
packages = [{include = "mongodb_serverless_benchmark"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.77"
motor = "^3.4.0"
pandas = "^2.2.1"
seaborn = "^0.13.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
